<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testiq.ui.home.HomeFragment"
        android:label="@string/Trang_chu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_exam"
        android:name="com.example.testiq.ui.exam.ExamFragment"
        android:label="@string/Bai_thi"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_rate_level"
        android:name="com.example.testiq.ui.rate_level.rateFragment"
        android:label="@string/Danh_gia"
        tools:layout="@layout/fragment_rate_level" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.testiq.ui.infor.InforFragment"
        android:label="@string/tai_khoan"
        tools:layout="@layout/fragment_infor" />
    <fragment
        android:id="@+id/nav_gopy"
        android:name="com.example.testiq.ui.gopy.GopYFragment"
        android:label="@string/gop_y"
        tools:layout="@layout/fragment_gop_y" />
</navigation>