<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/Trang_chu" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_menu_exam"
            android:title="@string/Bai_thi" />
        <item
            android:id="@+id/nav_rate_level"
            android:icon="@drawable/ic_menu_rate_level"
            android:title="@string/Danh_gia" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_account"
            android:title="@string/tai_khoan" />
    </group>

</menu>
