<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:textColor="#3D3131"
    android:layout_margin="8dp"
    android:background="@drawable/background"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/xep_loai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/txt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:background="@drawable/rate1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#3D3131"
            android:textSize="18sp"
            android:text="@string/txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:background="@drawable/rate2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#3D3131"
            android:textSize="18sp"
            android:text="@string/txt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:background="@drawable/rate3" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3D3131"
            android:textSize="18sp"
            android:text="@string/rate"
            android:layout_marginStart="20dp"
            android:textDirection="firstStrong"
            android:layout_marginLeft="50dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="#3D3131"
            android:text="@string/rate1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3D3131"
            android:textSize="17sp"
            android:text="@string/rate2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3D3131"
            android:textSize="16sp"
            android:text="@string/rate3" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3D3131"
            android:textSize="18sp"
            android:text="@string/rate4" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#3D3131"
            android:textSize="18sp"
            android:text="@string/rate5" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C74949"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/rate6" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:id="@+id/btnBaiThi"
            android:text="Kiểm tra IQ của tôi"
            android:background="@drawable/custom_button"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>