<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="35dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#272424"
        android:layout_marginBottom="20dp"
        android:text="@string/play_now"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Sign_Up"
        android:background="@drawable/custom_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Dang_ky" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Sign_In"
        android:background="@drawable/custom_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Dang_nhap" />

</LinearLayout>